HelloWord/force-app/main/default/objects/Job_Atul__c/Job_Atul__c.object-meta.xml
<CustomObject>
    <label>Job_Atul</label>
    <nameField>
        <label>Job_Atul</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Atuls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>