HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>comamign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Job_Atuls</relationshipLabel>
    <relationshipName>Job_Atuls</relationshipName>
    <type>Lookup</type>
</CustomField>