HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>