HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>Expires_On</description>
    <label>Expires On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>