HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Hired_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Hired_Applicants__c</fullName>
    <description>d</description>
    <label>Hired Applicants</label>
    <summaryFilterItems>
        <field>Candidate_Atul__c.Status__c</field>
        <operation>equals</operation>
        <value>Hired</value>
    </summaryFilterItems>
    <summaryForeignKey>Candidate_Atul__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>