HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Manager</description>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job_Atuls</relationshipLabel>
    <relationshipName>Job_Atuls</relationshipName>
    <type>Lookup</type>
</CustomField>