HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Qualification_Required__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Required__c</fullName>
    <label>Qualification Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bcom</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BTech.</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>rr</fullName>
            </value>
            <value>
                <fullName>sadfs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>