HelloWord/force-app/main/default/objects/Job_Atul__c/fields/Total_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicants__c</fullName>
    <description>dd</description>
    <label>Total Applicants</label>
    <summaryForeignKey>Candidate_Atul__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>