HelloWord/force-app/main/default/objects/Job_Atul__c/recordTypes/Admin.recordType-meta.xml
<RecordType>
    <fullName>Admin</fullName>
    <active>true</active>
    <description>Admin</description>
    <label>Admin</label>
</RecordType>