HelloWord/force-app/main/default/objects/Job_Atul__c/recordTypes/Developer.recordType-meta.xml
<RecordType>
    <fullName>Developer</fullName>
    <active>true</active>
    <description>s</description>
    <label>Developer</label>
</RecordType>