HelloWord/force-app/main/default/objects/Job_Atul__c/recordTypes/Manager.recordType-meta.xml
<RecordType>
    <fullName>Manager</fullName>
    <active>true</active>
    <description>Manager</description>
    <label>Manager</label>
</RecordType>